@@ -2,9 +2,11 @@ etckeeper (1.18.2-1) unstable; urgency=medium
 
   * Prepare upload to Debian unstable
   * Fix Makefile version patterns to ignore non-native version number
-  * Fix lintian warning by removing .pyc files on build.
+  * Fix lintian warning:
+    * remove .pyc files on build
+    * install bash completions in standard location
 
- -- Antoine Beaupré <anarcat@debian.org>  Thu, 14 Jan 2016 14:39:31 -0500
+ -- Antoine Beaupré <anarcat@debian.org>  Thu, 14 Jan 2016 15:20:40 -0500
 
 etckeeper (1.18.2) unstable; urgency=medium
 
